Fix spacing on lists

--- a/css/screen.css
+++ b/css/screen.css
@@ -104,6 +104,8 @@ html{
 }
 .tabcontent ol{
 	list-style-type: upper-roman;
+}
+.tabcontent ol li{
 	margin-bottom: 10px;
 }
 .tabcontent h5{
